# spider

./: .env.example  .gitignore  DISCLAIMER.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: APP_FLOW.md  BACKEND_STRUCTURE.md  FRONTEND_GUIDELINES.md  IMPLEMENTATION_PLAN.md  PRD.md  TECH_STACK.md
spider/: __init__.py  cli.py  config.py
spider/agents/: enumeration.py  exploitation.py  orchestrator.py  post_exploit.py  recon.py  reporting.py
spider/llm/: client.py  prompts.py
spider/state/: models.py  store.py
spider/templates/: .gitkeep  report.css  report.html
spider/tools/: cve_module_map.py  enum4linux_tool.py  gobuster_tool.py  gtfobins.py  msf_tool.py  nikto_tool.py  nmap_tool.py
spider/ui/: display.py
tests/: test_cve_module_map.py  test_gtfobins.py  test_llm_client.py  test_state_store.py
